objects/EinsteinResponse__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ChangeInteractivePageState__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Interactive Page State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentRegionState__c</fullName>
        <label>Content Region State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LWCName__c</fullName>
        <inlineHelpText>The LWC directory name, no dashes.</inlineHelpText>
        <label>LWC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseDelay__c</fullName>
        <label>Response Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetRecordId__c</fullName>
        <label>Target Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseLWCOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use LWC Override</label>
        <type>Checkbox</type>
    </fields>
    <label>Einstein Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Questions</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>ResponseDelay__c</columns>
        <columns>ContentRegionState__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Questions</label>
    </listViews>
    <listViews>
        <fullName>eResponse</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>eResponse</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Einstein Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>